--- a/styles.css
+++ b/styles.css
@@ -99,6 +99,7 @@ button:active {
   min-height: 65px;
   padding: 10px;
   font-size: 15px;
+  text-align: center;
   color: #0ff;
   border: 3px solid #0ff;
   border-radius: 15px;
